# Swing_HPC

./: CMakeLists.txt  README.md  animate_performance.py  build_and_run.sh  diag.py  legend_palette.py  main.cpp  plot_performance.py  rd.dot  swing_heatmap.py  torus_round_tables.py  torus_topology.dot
SST_Simulator/: README_FULL.md  SwingAlgorithm.h  build.sh  generate_topology.sh  notes.txt  run_sst.sh  torus_adj.txt  torus_generator.cpp
SST_Simulator/src/: CMakeLists.txt  SwingWorker.cc  SwingWorker.h
include/: NetworkTopology.h  TorusGenerator.h
include/Topology/: Node.h
include/algorithms/: AllreduceAlgorithm.h  BucketAlgorithm.h  RecursiveDoublingAlgorithm.h  RingAlgorithm.h
